k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/subnets: subnet-019969b6a5f7dd472, subnet-0732fb8924c55b646
    # alb.ingress.kubernetes.io/security-groups: sg-084bdf15235172893
    # alb.ingress.kubernetes.io/group.name: dev
spec:
  rules:
    - host: dev.btiwoom.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sample
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: http
